--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
+ject
 .settings
 .springBeans
 .sts4-cache
